Small refactoring, updated gradle version and libraries to versions without vulnerabilities, added bitcoin address generator.